--- a/app/src/main/res/layout/activity_city_for_residents.xml
+++ b/app/src/main/res/layout/activity_city_for_residents.xml
@@ -11,14 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:background="@android:color/transparent"
+            android:elevation="10dp"
+            android:background="@drawable/white_background"
             >
 
             <LinearLayout
@@ -26,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="3dp"
+                android:layout_marginRight="10dp"
                 android:gravity="center">
 
                 <LinearLayout
@@ -34,95 +36,54 @@
                     android:layout_width="20dp"
                     android:layout_height="20sp"
                     android:orientation="vertical"
+                    android:elevation="5dp"
                     android:layout_gravity="center_horizontal"
                     />
-
                 <TextView
                     android:id="@+id/collectorAssignedStreetResidents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:text="Street Name"
+                    android:textColor="@color/black_semi_transparent"
                     />
                 <TextView
                     android:id="@+id/collectorAssignedWasteTypeResidents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="10dp"
+                    android:textColor="@color/black_semi_transparent"
                     android:text=""
                     />
             </LinearLayout>
 
 
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="3dp"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_battery_0_bar_24"
-                    />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="10dp"
-                    android:text="TrashBin Capacity Percentage: "
-                    />
-                <TextView
-                    android:id="@+id/txtPercentageResidents"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Value%"
-                    android:textSize="15dp"
-                    android:textStyle="bold"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="3dp"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_fitness_center_24"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="10dp"
-                    android:text="TrashBin Weight: "/>
-                <TextView
-                    android:id="@+id/txtWeightResidents"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Value kg"
-                    android:textSize="15dp"
-                    android:textStyle="bold"
-                    />
-            </LinearLayout>
 
 
         </LinearLayout>
 
-        <com.mapbox.mapboxsdk.maps.MapView
-            android:id="@+id/city_map_residents"
-            android:paddingTop="10sp"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            mapbox:mapbox_cameraTargetLat="14.5378"
-            mapbox:mapbox_cameraTargetLng="121.0014"
-            mapbox:mapbox_cameraZoom="12"
-            >
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:elevation="10dp"
+            android:background="@drawable/white_background"
+            app:cardCornerRadius="20dp">
 
+            <com.mapbox.mapboxsdk.maps.MapView
+                android:id="@+id/city_map_residents"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                mapbox:mapbox_cameraTargetLat="14.5378"
+                mapbox:mapbox_cameraTargetLng="121.0014"
+                mapbox:mapbox_cameraZoom="12"
+                />
 
-        </com.mapbox.mapboxsdk.maps.MapView>
+        </androidx.cardview.widget.CardView>
+
 
     </LinearLayout>
 
@@ -144,7 +105,7 @@
             app:fab_colorPressed="@color/white_pressed"
             app:fab_size="mini"
             app:fab_icon="@drawable/ic_baseline_my_location_24"
-            app:fab_title="my location"
+            app:fab_title="My location"
             android:id="@+id/showResidentLocation"
             />
 
@@ -155,7 +116,7 @@
             app:fab_colorPressed="@color/white_pressed"
             app:fab_size="mini"
             app:fab_icon="@drawable/ic_baseline_search_24"
-            app:fab_title="find collector"
+            app:fab_title="Find collector"
             android:id="@+id/findCollector"
             />
 
@@ -166,7 +127,7 @@
             app:fab_colorPressed="@color/white_pressed"
             app:fab_size="mini"
             app:fab_icon="@drawable/ic_baseline_keyboard_backspace_24"
-            app:fab_title="return to home"
+            app:fab_title="Return"
             android:id="@+id/backToHome"
             />
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
