--- a/app/src/main/res/layout/layout_announcement.xml
+++ b/app/src/main/res/layout/layout_announcement.xml
@@ -3,6 +3,9 @@
     android:layout_width="match_parent"
     android:clickable="true"
     android:focusable="true"
+    android:elevation="5dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/top_icon_background"
     android:layout_height="wrap_content">
     
     <LinearLayout
