--- a/app/src/main/res/layout/layout_home.xml
+++ b/app/src/main/res/layout/layout_home.xml
@@ -16,6 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="E-Tapon Mo!"
+            android:textStyle="bold"
+            android:elevation="5dp"
             android:textSize="20sp"/>
         
     </com.google.android.material.appbar.MaterialToolbar>
