--- a/app/src/main/res/layout/layout_schedule.xml
+++ b/app/src/main/res/layout/layout_schedule.xml
@@ -4,6 +4,9 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
+    android:elevation="5dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/top_icon_background"
     android:outlineAmbientShadowColor="@color/colorBlack"
     >
 
@@ -25,6 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
+                android:elevation="5dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:text="Day"/>
@@ -47,6 +51,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:elevation="5dp"
                 android:paddingLeft="6dp"
                 android:orientation="vertical">
 
@@ -79,6 +84,8 @@
                 android:layout_width="20dp"
                 android:layout_height="20sp"
                 android:orientation="vertical"
+                android:elevation="5dp"
+                android:padding="5dp"
                 android:layout_gravity="center_horizontal"
                 />
 
