--- a/app/src/main/res/layout/layout_schedule_residents.xml
+++ b/app/src/main/res/layout/layout_schedule_residents.xml
@@ -4,6 +4,9 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
+    android:elevation="5dp"
+    android:layout_margin="10dp"
+    android:background="@drawable/top_icon_background"
     android:outlineAmbientShadowColor="@color/colorBlack">
 
     <LinearLayout
@@ -26,6 +29,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:orientation="vertical"
+                android:elevation="5dp"
                 android:layout_gravity="center_horizontal"
                 />
 
@@ -41,6 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Day"
+                    android:elevation="5dp"
                     android:textSize="12sp"
                     android:textStyle="bold" />
                 <LinearLayout
@@ -93,6 +98,8 @@
                 android:layout_width="20dp"
                 android:layout_height="20sp"
                 android:orientation="vertical"
+                android:elevation="5dp"
+                android:padding="5dp"
                 android:layout_gravity="center_horizontal"
                 />
         </LinearLayout>
