--- a/app/src/main/res/drawable/top_icon_background.xml
+++ b/app/src/main/res/drawable/top_icon_background.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#f1f1f1"/>
-            <corners android:radius="20dp"/>
+        <shape android:shape="rectangle">/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
 </selector>
