--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -11,15 +11,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:layout_margin="10dp"
             android:elevation="10dp"
+            android:padding="3dp"
             android:background="@drawable/white_background"
             >
 
@@ -46,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textSize="12dp"
+                    android:textSize="15dp"
                     android:textColor="@color/black_semi_transparent"
                     android:text="Street Name"
                     />
@@ -78,7 +79,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="10dp"
+                    android:textSize="12dp"
                     android:text="Percentage: "
                     android:textColor="@color/black_semi_transparent"
                     />
@@ -108,7 +109,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="10dp"
+                    android:textSize="12dp"
                     android:textColor="@color/black_semi_transparent"
                     android:text="Weight: "/>
                 <TextView
@@ -132,7 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:elevation="10dp"
             android:background="@drawable/white_background"
             app:cardCornerRadius="20dp">
