--- a/app/src/main/res/layout/activity_city_for_residents.xml
+++ b/app/src/main/res/layout/activity_city_for_residents.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,6 +18,8 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:elevation="10dp"
+            android:layout_margin="10dp"
+            android:padding="3dp"
             android:background="@drawable/white_background"
             >
 
@@ -43,6 +44,7 @@
                     android:id="@+id/collectorAssignedStreetResidents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:textStyle="bold"
                     android:text="Street Name"
                     android:textColor="@color/black_semi_transparent"
@@ -51,7 +53,7 @@
                     android:id="@+id/collectorAssignedWasteTypeResidents"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="10dp"
+                    android:textSize="15dp"
                     android:textColor="@color/black_semi_transparent"
                     android:text=""
                     />
@@ -68,7 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:elevation="10dp"
             android:background="@drawable/white_background"
             app:cardCornerRadius="20dp">
