--- a/app/src/main/res/layout/layout_add_complaint.xml
+++ b/app/src/main/res/layout/layout_add_complaint.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:elevation="5dp"
-    android:layout_margin="10dp"
-    android:background="@drawable/top_icon_background">
+    android:elevation="10dp"
+    android:layout_margin="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
