--- a/app/src/main/res/layout/layout_announcement.xml
+++ b/app/src/main/res/layout/layout_announcement.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:focusable="true"
-    android:elevation="5dp"
+    android:elevation="20dp"
+    app:cardCornerRadius="15dp"
     android:layout_margin="10dp"
-    android:background="@drawable/top_icon_background"
     android:layout_height="wrap_content">
     
     <LinearLayout
@@ -16,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="#023047"
             android:padding="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -36,11 +38,13 @@
                     android:textSize="16sp"
                     android:id="@+id/txtAnnouncementName"
                     android:textStyle="bold"
+                    android:textColor="@color/white"
                     android:text="Admin Name"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="11sp"
+                    android:textColor="@color/white"
                     android:id="@+id/txtAnnouncementDate"
                     android:text="Feb 14"/>
 
@@ -53,6 +57,7 @@
             android:textSize="15sp"
             android:textStyle="bold"
             android:id="@+id/txtAnnouncementTitle"
+            android:layout_marginTop="5dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:paddingBottom="8dp"
