--- a/app/src/main/res/layout/layout_complaint.xml
+++ b/app/src/main/res/layout/layout_complaint.xml
@@ -2,18 +2,18 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:focusable="true"
-    android:elevation="5dp"
+    android:elevation="20dp"
+    app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
-    android:id="@+id/complaintCard"
-    android:background="@drawable/top_icon_background">
+    android:id="@+id/complaintCard">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="5dp"
         >
 
         <LinearLayout
@@ -21,12 +21,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-
-            android:padding="10dp">
+            android:background="#023047"
+            android:padding="5dp">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginRight="5dp"
+                android:layout_margin="5dp"
                 android:id="@+id/imgComplaintProfile"
                 android:src="@color/bootsTrap_colorPrimary"/>
 
@@ -41,42 +41,79 @@
                     android:id="@+id/complaintName"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
                     android:text="Alexander Udag"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"/>
                 <TextView
                     android:id="@+id/complaintDate"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:textColor="@color/white"
                     android:text="Feb 14"
                     android:textSize="11sp"/>
 
 
             </LinearLayout>
+<!--            <ImageView-->
+<!--                android:id="@+id/complaintEdit"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="3dp"-->
+<!--                android:src="@drawable/ic_baseline_edit_24"/>-->
+
 
             <ImageView
                 android:id="@+id/complaintEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
+                android:layout_margin="5dp"
+                android:elevation="20dp"
                 android:src="@drawable/ic_baseline_edit_24"/>
             <ImageView
                 android:id="@+id/complaintDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="3dp"
+                android:layout_margin="5dp"
+                android:elevation="20dp"
                 android:src="@drawable/ic_baseline_delete_24"/>
         </LinearLayout>
-        <TextView
-            android:id="@+id/complaintTitle"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="ako ngapo pala ay may problema"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/complaintSeen2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="seen by admin"
+                android:textSize="10dp"
+                android:textColor="@color/bootsTrap_colorSuccess"
+                android:layout_marginTop="9dp"
+                android:paddingStart="10dp"
+                />
+            <ImageView
+                android:id="@+id/complaintSeen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:src="@drawable/ic_baseline_remove_red_eye_24"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/complaintTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:text="ako nga po pala ay may problema"
             android:textAllCaps="true"
             android:textSize="15sp"
             android:paddingStart="10dp"
+            android:paddingBottom="10dp"
             android:textStyle="bold"/>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
