--- a/app/src/main/res/layout/layout_complaints.xml
+++ b/app/src/main/res/layout/layout_complaints.xml
@@ -47,7 +47,7 @@
         android:layout_margin="16dp"
         android:contentDescription="add complaint"
         app:backgroundTint="@color/bootsTrap_colorPrimary"
-        app:fab_colorNormal="@color/white"
+        app:tint="@android:color/white"
         app:srcCompat="@drawable/ic_baseline_add_24"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
