--- a/app/src/main/res/layout/layout_profile_info.xml
+++ b/app/src/main/res/layout/layout_profile_info.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,117 +12,136 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imgUserImage"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="5dp"
-                android:src="@color/colorLightGrey" />
 
-            <TextView
-                android:id="@+id/txtUserName"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="Alexander Udag"
-                android:textSize="20dp"
-                android:elevation="10dp"
-                android:textColor="@color/black_semi_transparent"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/txtUserEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:gravity="center_horizontal"
-                android:elevation="5dp"
-                android:textColor="@color/black_semi_transparent"
-                android:text="alexander.udag@tup.edu.ph"
-                android:textSize="18dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/top_icon_background"
-                android:elevation="5dp"
+                android:padding="20dp"
+                android:elevation="20dp"
                 android:layout_margin="10dp"
-                android:orientation="vertical"
-                android:padding="20dp">
-
+                app:cardCornerRadius="10dp"
+                >
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    >
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/roleIcon"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:background="@drawable/etm_logo" />
+                        android:id="@+id/imgUserImage"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="5dp"
+                        android:src="@color/colorLightGrey" />
 
+                    <TextView
+                        android:id="@+id/txtUserName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="Alexander Udag"
+                        android:textSize="20dp"
+                        android:elevation="10dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtUserEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:gravity="center_horizontal"
+                        android:elevation="5dp"
+                        android:text="alexander.udag@tup.edu.ph"
+                        android:textSize="18dp" />
                 </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:elevation="20dp"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
+                    android:orientation="vertical"
+                    android:layout_margin="15dp">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Role:"
-                        android:textColor="@color/black_semi_transparent"
-                        android:textAlignment="viewStart" />
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/txtUserRole"
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/roleIcon"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:background="@drawable/etm_logo" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black_semi_transparent"
-                        android:text="Admin"
-                        android:textStyle="bold"
-                        android:textAlignment="viewEnd" />
-                </LinearLayout>
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Role:"
+                            android:textAlignment="viewStart" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black_semi_transparent"
-                        android:text="Street:"
-                        android:textAlignment="viewStart" />
+                        <TextView
+                            android:id="@+id/txtUserRole"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Admin"
+                            android:textStyle="bold"
+                            android:textAlignment="viewEnd" />
+                    </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/txtUserStreet"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black_semi_transparent"
-                        android:text="Agustine"
-                        android:textStyle="bold"
-                        android:textAlignment="viewEnd" />
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Street:"
+                            android:textAlignment="viewStart" />
+
+                        <TextView
+                            android:id="@+id/txtUserStreet"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Agustine"
+                            android:textStyle="bold"
+                            android:textAlignment="viewEnd" />
+                    </LinearLayout>
+                    <Button
+                        android:layout_gravity="center"
+                        android:id="@+id/btnUserLogout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/btn_round_primary"
+                        android:textColor="@color/white"
+                        android:textAllCaps="false"
+                        android:layout_marginTop="40dp"
+                        android:drawableStart="@drawable/ic_baseline_arrow_back_24"
+                        android:text="Log Out"/>
                 </LinearLayout>
-                <Button
-                    android:layout_gravity="center"
-                    android:id="@+id/btnUserLogout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_round_primary"
-                    android:textColor="@color/white"
-                    android:textAllCaps="false"
-                    android:layout_marginTop="40dp"
-                    android:drawableStart="@drawable/ic_baseline_arrow_back_24"
-                    android:text="Log Out"/>
-            </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
 
 
         </LinearLayout>
