--- a/app/src/main/res/layout/layout_schedule_residents.xml
+++ b/app/src/main/res/layout/layout_schedule_residents.xml
@@ -2,11 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:focusable="true"
-    android:elevation="5dp"
+    android:elevation="20dp"
+    app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
-    android:background="@drawable/top_icon_background"
     android:outlineAmbientShadowColor="@color/colorBlack">
 
     <LinearLayout
